--- a/app/src/main/res/layout/content_communication_panel.xml
+++ b/app/src/main/res/layout/content_communication_panel.xml
@@ -23,14 +23,6 @@
             android:background="#eee"
             android:id="@+id/commlayout"
             android:minHeight="500dp">
-            <ProgressBar
-                android:id="@+id/progressBar1"
-                style="?android:attr/progressBarStyleLarge"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_centerHorizontal="true"
-                android:visibility="visible" />
 
             <TextView
                 android:layout_width="fill_parent"
@@ -121,15 +113,44 @@
         android:dividerHeight="2dp"
         android:layout_above="@+id/convMenu"
         android:focusable="false" />
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/colorPrimary"
+        android:id="@+id/commMenu"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="86dp"
+        android:layout_gravity="center"
+        android:visibility="gone">
+        <android.support.design.widget.FloatingActionButton android:id="@+id/prev"
+            android:layout_width="wrap_content" android:layout_height="wrap_content"
+            android:layout_margin="@dimen/fab_margin" android:src="@android:drawable/ic_media_previous"
+            app:layout_anchorGravity="bottom|end"
+            android:visibility="visible"
+            app:backgroundTint="@color/colorPrimaryDark"
+            android:layout_centerVertical="true" />
+        <android.support.design.widget.FloatingActionButton android:id="@+id/next"
+            android:layout_width="wrap_content" android:layout_height="wrap_content"
+            app:layout_anchorGravity="bottom|end" android:src="@android:drawable/ic_media_next"
+            app:backgroundTint="@color/colorPrimaryDark"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_margin="@dimen/fab_margin" />
+        <android.support.design.widget.FloatingActionButton android:id="@+id/fab"
+            android:layout_width="wrap_content" android:layout_height="wrap_content"
+            app:layout_anchorGravity="bottom|end" android:src="@android:drawable/ic_input_add"
+            android:layout_centerVertical="true"
+            android:layout_centerHorizontal="true" />
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:background="@color/colorPrimaryDark"
         android:padding="10dp"
         android:visibility="gone"
-        android:id="@+id/replyLayout">
+        android:id="@+id/replyLayout"
+        android:layout_above="@+id/convMenu">
         <EditText
             android:layout_width="310dp"
             android:layout_height="wrap_content"
@@ -140,7 +161,8 @@
             android:height="45dp"
             android:layout_centerVertical="true"
             android:layout_toLeftOf="@+id/send"
-            android:layout_toStartOf="@+id/send" />
+            android:layout_toStartOf="@+id/send"
+            android:padding="5dp" />
 
         <android.support.design.widget.FloatingActionButton
             android:layout_width="wrap_content"
@@ -157,32 +179,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/colorPrimary"
-        android:id="@+id/commMenu"
-        android:layout_alignParentBottom="true"
-        android:layout_gravity="center"
-        android:visibility="gone">
-        <android.support.design.widget.FloatingActionButton android:id="@+id/prev"
-            android:layout_width="wrap_content" android:layout_height="wrap_content"
-            android:layout_margin="@dimen/fab_margin" android:src="@android:drawable/ic_media_previous"
-            app:layout_anchorGravity="bottom|end" />
-        <android.support.design.widget.FloatingActionButton android:id="@+id/next"
-            android:layout_width="wrap_content" android:layout_height="wrap_content"
-            app:layout_anchorGravity="bottom|end" android:src="@android:drawable/ic_media_next"
-            android:layout_alignTop="@+id/prev"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true"
-            android:layout_marginRight="15dp" />
-        <android.support.design.widget.FloatingActionButton android:id="@+id/fab"
-            android:layout_width="wrap_content" android:layout_height="wrap_content"
-            app:layout_anchorGravity="bottom|end" android:src="@android:drawable/ic_input_add"
-            android:layout_alignTop="@+id/next"
-            android:layout_centerHorizontal="true" />
-    </RelativeLayout>
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/colorPrimary"
         android:id="@+id/convMenu"
         android:layout_gravity="center"
         android:visibility="visible"
@@ -191,18 +187,32 @@
             android:layout_width="wrap_content" android:layout_height="wrap_content"
             android:layout_margin="@dimen/fab_margin" android:src="@android:drawable/ic_media_previous"
             app:layout_anchorGravity="bottom|end"
-            android:layout_alignParentLeft="true" />
+            android:layout_alignParentLeft="true"
+            app:backgroundTint="@color/colorPrimaryDark"
+            android:layout_centerVertical="true" />
         <android.support.design.widget.FloatingActionButton android:id="@+id/delete"
             android:layout_width="wrap_content" android:layout_height="wrap_content"
             app:layout_anchorGravity="bottom|end" android:src="@android:drawable/ic_delete"
             android:layout_alignParentRight="true"
             android:layout_alignParentEnd="false"
-            android:layout_margin="@dimen/fab_margin" />
+            android:layout_margin="@dimen/fab_margin"
+            android:layout_centerVertical="true" />
 
         <android.support.design.widget.FloatingActionButton android:id="@+id/reply"
             android:layout_width="wrap_content" android:layout_height="wrap_content"
-            app:layout_anchorGravity="bottom|end" android:src="@android:drawable/ic_input_add"
-            android:layout_alignTop="@+id/back"
-            android:layout_centerHorizontal="true" />
+            app:layout_anchorGravity="bottom|end" android:src="@android:drawable/ic_dialog_email"
+            app:backgroundTint="@color/colorPrimaryDark"
+            android:layout_centerInParent="true" />
+
     </RelativeLayout>
+
+    <ProgressBar
+        android:id="@+id/progressBar1"
+        style="?android:attr/progressBarStyleLarge"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true"
+        android:visibility="visible" />
+
 </RelativeLayout>
