--- a/app/src/main/res/layout/activity_communication_panel.xml
+++ b/app/src/main/res/layout/activity_communication_panel.xml
@@ -23,7 +23,7 @@
 
         <android.support.v7.widget.Toolbar android:id="@+id/toolbar"
             android:layout_height="?attr/actionBarSize" android:layout_width="match_parent"
-            app:layout_collapseMode="pin" app:logo="@mipmap/logo"
+            app:layout_collapseMode="pin" app:logo="@mipmap/cwl"
             app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
             android:indeterminate="false" android:textColor="#fff" />
     </android.support.design.widget.AppBarLayout>
@@ -39,6 +39,11 @@
         app:menu="@menu/comm_drawer"
         app:headerLayout="@layout/navigation_drawer_header"
         >
-
+        <ImageView
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/tag"
+            android:layout_marginTop="517dp"
+            android:src="@drawable/tag" />
     </android.support.design.widget.NavigationView>
 </android.support.v4.widget.DrawerLayout>
