--- a/app/src/main/res/layout/activity_homepage.xml
+++ b/app/src/main/res/layout/activity_homepage.xml
@@ -29,6 +29,7 @@
         <android.support.v7.widget.Toolbar
             android:layout_width="match_parent" android:layout_height="wrap_content"
             android:id="@+id/nav_toolbar" app:logo="@mipmap/infobits"
+            android:title="@string/homepage"
             android:background="?attr/colorPrimaryDark"
             android:minHeight="?attr/actionBarSize"
             android:fitsSystemWindows="true"
@@ -106,25 +107,31 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/imgbt_service5"
-                android:src="@drawable/dnx"
+                android:src="@mipmap/dn"
                 android:onClick="onClickDN"
                 android:padding="0dp"
                 android:longClickable="true"
                 android:clickable="true"
                 android:layout_below="@+id/imgbt_service2"
                 android:layout_toRightOf="@+id/imgbt_service4"
-                android:layout_margin="12dp" />
+                android:layout_margin="12dp"
+                android:scaleType="fitCenter"
+                android:minHeight="96dp"
+                android:minWidth="96dp" />
             <ImageButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/imgbt_service6"
                 android:onClick="onClickCWL"
                 android:padding="0dp"
-                android:src="@drawable/cwlx"
+                android:src="@mipmap/cwl"
                 android:clickable="true"
                 android:layout_margin="12dp"
                 android:layout_below="@+id/imgbt_service3"
-                android:layout_toRightOf="@+id/imgbt_service5" />
+                android:layout_toRightOf="@+id/imgbt_service5"
+                android:minHeight="96dp"
+                android:minWidth="96dp"
+                android:scaleType="fitCenter" />
         </RelativeLayout>
 
 
@@ -143,7 +150,7 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:id="@+id/tag"
-            android:layout_marginTop="500dp"
+            android:layout_marginTop="517dp"
             android:src="@drawable/tag" />
     </android.support.design.widget.NavigationView>
 
