--- a/app/src/main/res/layout/database.xml
+++ b/app/src/main/res/layout/database.xml
@@ -13,7 +13,7 @@
 
         <android.support.v7.widget.Toolbar android:id="@+id/toolbar"
             android:layout_height="?attr/actionBarSize" android:layout_width="match_parent"
-            app:layout_collapseMode="pin" app:logo="@mipmap/logo"
+            app:layout_collapseMode="pin" app:logo="@mipmap/cwl"
             android:title="I Just Read This Book!"
             app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
             android:indeterminate="false" android:textColor="#fff" />
@@ -26,7 +26,8 @@
         android:layout_centerHorizontal="true"
         android:background="#ddd"
         android:layout_below="@+id/app_bar"
-        android:layout_margin="10dp">
+        android:layout_margin="10dp"
+        android:id="@+id/CommForm">
 
         <TextView
             android:layout_width="wrap_content"
@@ -104,20 +105,17 @@
             android:layout_alignLeft="@+id/journalText"
             android:layout_alignStart="@+id/journalText" />
 
-        <Button
+        <android.support.design.widget.FloatingActionButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/newConv"
-            android:layout_alignWithParentIfMissing="false"
+            app:layout_anchorGravity="bottom|end" android:src="@android:drawable/ic_menu_send"
             android:clickable="true"
-            android:text="Send"
-            android:background="@color/colorPrimary"
-            android:textColor="@color/colorPrimaryDark"
-            android:textSize="25sp"
             android:onClick="newConv"
+            app:backgroundTint="@color/colorPrimaryDark"
             android:layout_below="@+id/location"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="30dp" />
+            android:layout_margin="@dimen/fab_margin"
+            android:layout_centerHorizontal="true" />
 
         <EditText
             android:layout_width="200dp"
@@ -135,5 +133,14 @@
             android:layout_alignEnd="@+id/journal" />
 
     </RelativeLayout>
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyleLarge"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true"
+        android:visibility="gone" />
 
 </RelativeLayout>
