--- a/app/src/main/res/layout/navigation_drawer_header.xml
+++ b/app/src/main/res/layout/navigation_drawer_header.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="180dp">
+    android:layout_width="match_parent" android:layout_height="180dp"
+    android:background="#e0dfeb">
     <ImageView
         android:layout_width="100dp"
         android:layout_height="100dp"
@@ -20,7 +21,8 @@
         android:padding="5dp"
         android:id="@+id/name"
         android:layout_alignRight="@+id/email"
-        android:layout_alignEnd="@+id/email" />
+        android:layout_alignEnd="@+id/email"
+        android:textColor="@color/colorPrimaryDark" />
 
     <TextView
         android:layout_width="match_parent"
@@ -28,11 +30,13 @@
         android:text="suryanshr@xyzmail.com"
         android:layout_toRightOf="@+id/profile"
         android:layout_below="@+id/name"
-        android:textSize="20dp"
+        android:textSize="16sp"
         android:textStyle="bold"
         android:padding="5dp"
         android:id="@+id/email"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentEnd="true"
+        android:textColor="@color/colorPrimaryDark"
+        android:layout_alignBottom="@+id/profile" />
 
 </RelativeLayout>
