--- a/app/src/main/res/menu/comm_drawer.xml
+++ b/app/src/main/res/menu/comm_drawer.xml
@@ -12,7 +12,7 @@
 
         <item
             android:id="@+id/dlost"
-            android:title="Lost Documents"
+            android:title="Documents Not Found"
             ></item>
 
         <item
@@ -37,8 +37,8 @@
         <item
             android:id="@+id/refresh"
             android:title="Refresh Data"
+            android:checkable="false"
             ></item>
-
     </group>
 
 </menu>
