--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -7,7 +7,7 @@
         <item
             android:id="@+id/home_id"
             android:title="Home"
-            android:icon="@drawable/icon1"
+            android:icon="@mipmap/infobits"
             ></item>
     </group>
     <group android:checkableBehavior="single">
@@ -18,14 +18,14 @@
             ></item>
         <item
             android:id="@+id/comm_id"
-            android:title="Communication Panel"
-            android:icon="@drawable/icon2"
+            android:title="Connect With Library"
+            android:icon="@mipmap/cwl"
             ></item>
 
         <item
             android:id="@+id/news_id"
             android:title="Daily News"
-            android:icon="@drawable/icon3"
+            android:icon="@mipmap/dn"
             ></item>
 
         <item
@@ -69,6 +69,17 @@
 
         <item
             android:id="@+id/opac_id"
+            android:title="WEB OPAC"
+            android:icon="@drawable/settings"
+            ></item>
+        <item
+            android:id="@+id/od_id1"
+            android:title="Online Databases"
+            android:icon="@drawable/settings"
+            ></item>
+
+        <item
+            android:id="@+id/opac_id1"
             android:title="WEB OPAC"
             android:icon="@drawable/settings"
             ></item>
