--- a/app/src/main/res/layout/activity_library_resources.xml
+++ b/app/src/main/res/layout/activity_library_resources.xml
@@ -16,7 +16,7 @@
         <android.support.v7.widget.Toolbar
             android:layout_width="match_parent" android:layout_height="wrap_content"
             android:id="@+id/nav_toolbar" app:logo="@mipmap/libr"
-            android:background="?attr/colorPrimaryDark"
+            android:background="@color/colorPrimaryDark"
             android:minHeight="?attr/actionBarSize"
             android:fitsSystemWindows="true"
             app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
@@ -80,6 +80,30 @@
                 android:layout_alignLeft="@+id/imgbt_service2"
                 android:layout_alignStart="@+id/imgbt_service2"
                 android:layout_margin="12dp" />
+
+            <ImageButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/imgbt_service5"
+                android:onClick="onClickIR"
+                android:src="@drawable/ir"
+                android:padding="0dp"
+                android:clickable="true"
+                android:layout_below="@+id/imgbt_service3"
+                android:layout_alignLeft="@+id/imgbt_service3"
+                android:layout_alignBottom="@+id/imgbt_service6"
+                android:layout_toLeftOf="@+id/imgbt_service4" />
+
+            <ImageButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/imgbt_service6"
+                android:onClick="onClickDOT"
+                android:src="@drawable/dotxx"
+                android:padding="0dp"
+                android:clickable="true"
+                android:layout_below="@+id/imgbt_service4"
+                android:layout_alignLeft="@+id/imgbt_service4" />
 
         </RelativeLayout>
 
