--- a/app/src/main/res/layout/content_user_settings.xml
+++ b/app/src/main/res/layout/content_user_settings.xml
@@ -50,7 +50,8 @@
                     android:background="@drawable/roundedbutton"
                     android:layout_marginTop="100dp"
                     android:padding="10dp"
-                    android:visibility="invisible" />
+                    android:visibility="invisible"
+                    android:layout_marginRight="20dp" />
 
             </LinearLayout>
 
@@ -59,7 +60,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
-                android:layout_marginBottom="10dp">
+                android:layout_marginBottom="10dp"
+                android:id="@+id/NameLayout"
+                android:visibility="invisible">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -83,7 +86,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
-                android:layout_marginBottom="10dp" >
+                android:layout_marginBottom="10dp"
+                android:id="@+id/EmailLayout"
+                android:visibility="invisible">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -109,7 +114,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
-                android:layout_marginBottom="10dp" >
+                android:layout_marginBottom="10dp"
+                android:id="@+id/MobileLayout"
+                android:visibility="invisible">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -120,7 +127,7 @@
                     android:layout_marginLeft="15dp" />
 
                 <EditText
-                    android:layout_width="wrap_content"
+                    android:layout_width="160dp"
                     android:layout_height="wrap_content"
                     android:inputType="phone"
                     android:ems="10"
@@ -130,7 +137,9 @@
                     android:focusable="false"
                     android:focusableInTouchMode="false"
                     android:textColor="@color/primary_text_default_material_light"
-                    android:text="1234567890" />
+                    android:text="1234567890"
+                    android:autoText="false"
+                    android:textColorHint="@color/abc_secondary_text_material_light" />
 
                 <Button
                     android:layout_width="wrap_content"
@@ -139,7 +148,9 @@
                     android:id="@+id/update1"
                     android:textColor="@color/primary_text_default_material_dark"
                     android:background="@drawable/roundedbutton"
-                    android:visibility="invisible" />
+                    android:visibility="invisible"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginRight="10dp" />
 
             </LinearLayout>
 
@@ -152,96 +163,61 @@
                 android:layout_marginLeft="15dp"
                 android:visibility="invisible" />
 
-            <LinearLayout
-                android:orientation="horizontal"
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/oldPassLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:layout_marginBottom="10dp"
-                android:visibility="invisible"
-                android:id="@+id/oldPassLayout">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceMedium"
-                    android:text="@string/old_password"
-                    android:id="@+id/textView7"
-                    android:layout_marginLeft="15dp" />
+                android:visibility="invisible">
 
                 <EditText
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:ems="10"
                     android:id="@+id/oldPassword"
-                    android:layout_marginLeft="10dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="16dp"
+                    android:hint="@string/old_password"
                     android:inputType="textPassword" />
+            </android.support.design.widget.TextInputLayout>
 
-            </LinearLayout>
-
-            <LinearLayout
-                android:orientation="horizontal"
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/newPassLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:layout_marginBottom="10dp"
-                android:visibility="invisible"
-                android:id="@+id/newPassLayout">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceMedium"
-                    android:text="@string/new_password"
-                    android:id="@+id/textView8"
-                    android:layout_marginLeft="15dp" />
+                android:visibility="invisible" >
 
                 <EditText
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:inputType="textPassword"
-                    android:ems="10"
                     android:id="@+id/newPassword"
-                    android:layout_marginLeft="10dp" />
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="16dp"
+                    android:hint="@string/new_password"
+                    android:inputType="textPassword" />
+            </android.support.design.widget.TextInputLayout>
 
-            </LinearLayout>
-
-            <LinearLayout
-                android:orientation="horizontal"
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/confirmPassLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:layout_marginBottom="10dp"
-                android:visibility="invisible"
-                android:id="@+id/confirmPassLayout">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceMedium"
-                    android:text="@string/confirm_password"
-                    android:id="@+id/textView9"
-                    android:layout_marginLeft="15dp" />
+                android:visibility="invisible" >
 
                 <EditText
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:ems="10"
                     android:id="@+id/confirmPassword"
-                    android:layout_marginLeft="10dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="16dp"
+                    android:hint="@string/confirm_password"
                     android:inputType="textPassword" />
-
-            </LinearLayout>
+            </android.support.design.widget.TextInputLayout>
 
             <Button
-                android:layout_width="wrap_content"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/update"
                 android:id="@+id/update2"
                 android:textColor="@color/primary_text_default_material_dark"
                 android:background="@drawable/roundedbutton"
                 android:visibility="invisible"
-                android:layout_marginLeft="100dp" />
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp" />
 
         </LinearLayout>
 
