--- a/app/src/main/res/layout/downloadable_links.xml
+++ b/app/src/main/res/layout/downloadable_links.xml
@@ -19,13 +19,12 @@
         android:background="@color/colorPrimaryDark">
 
         <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
+            android:id="@+id/toolbar1"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
             app:layout_collapseMode="pin"
             app:logo="@mipmap/logo"
-            android:title="@string/title_activity_user_settings"
             android:textColor="#fff"/>
 
     </android.support.design.widget.AppBarLayout>
