Splash Screen and API for Homepage Swiper

--- a/app/src/main/res/layout/activity_cover.xml
+++ b/app/src/main/res/layout/activity_cover.xml
@@ -8,6 +8,18 @@
         android:id="@+id/imageView"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
-        android:scaleType="fitCenter"
+        android:scaleType="centerCrop"
         android:src="@drawable/cover" />
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="visible"
+        android:progressTint="@color/colorPrimaryDark"
+        android:indeterminate="false"
+        android:layout_marginTop="240dp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
+
 </RelativeLayout>
