--- a/app/src/main/res/layout/activity_homepage.xml
+++ b/app/src/main/res/layout/activity_homepage.xml
@@ -30,7 +30,7 @@
             android:layout_width="match_parent" android:layout_height="wrap_content"
             android:id="@+id/nav_toolbar" app:logo="@mipmap/infobits"
             android:title="@string/homepage"
-            android:background="?attr/colorPrimaryDark"
+            android:background="@color/colorPrimaryDark"
             android:minHeight="?attr/actionBarSize"
             android:fitsSystemWindows="true"
             app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
@@ -44,7 +44,8 @@
             android:padding="0dp"
             android:layout_below="@+id/homeicons"
             android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp"></android.support.v4.view.ViewPager>
+            android:layout_marginBottom="10dp"
+            android:fadingEdge="horizontal"></android.support.v4.view.ViewPager>
 
         <RelativeLayout
             android:layout_width="match_parent"
