--- a/app/src/main/res/layout/swipe_image.xml
+++ b/app/src/main/res/layout/swipe_image.xml
@@ -2,30 +2,15 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
-
-
-    <TextView
-        android:layout_height="wrap_content"
-        android:layout_width="match_parent"
-        android:id="@+id/image_count"
-        android:textSize="25dp"
-        android:textStyle="bold"
-        android:gravity="center"
-
-        android:layout_alignParentLeft="true"
-        android:layout_marginLeft="0dp"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="0dp" />
-
     <ImageView
         android:layout_marginTop="0dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="400dp"
+        android:layout_height="match_parent"
         android:id="@+id/image_view"
 
-        android:layout_alignParentLeft="true"
         android:layout_marginLeft="0dp"
-        android:layout_alignParentTop="true"
-        android:padding="0dp" />
+        android:padding="0dp"
+        android:scaleType="fitCenter"
+        android:layout_centerInParent="true" />
 
 </RelativeLayout>
