User Serttings API changes

--- a/app/src/main/res/layout/content_user_settings.xml
+++ b/app/src/main/res/layout/content_user_settings.xml
@@ -24,7 +24,7 @@
                 android:layout_height="match_parent"
                 android:weightSum="1">
 
-                <ImageView
+                <com.android.volley.toolbox.NetworkImageView
                     android:layout_width="200dp"
                     android:layout_height="200dp"
                     android:layout_above="@+id/textView4"
@@ -32,14 +32,15 @@
                     android:layout_toEndOf="@+id/textView2"
                     android:id="@+id/profile"
                     android:src="@drawable/pp"
-                    android:padding="10dp" />
+                    android:padding="10dp"
+                    android:visibility="gone" />
 
                 <ImageButton
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/imageButton"
                     android:src="@android:drawable/ic_menu_edit"
-                    android:visibility="invisible" />
+                    android:visibility="gone" />
 
                 <Button
                     android:layout_width="wrap_content"
@@ -50,7 +51,7 @@
                     android:background="@drawable/roundedbutton"
                     android:layout_marginTop="100dp"
                     android:padding="10dp"
-                    android:visibility="invisible"
+                    android:visibility="gone"
                     android:layout_marginRight="20dp" />
 
             </LinearLayout>
@@ -62,7 +63,7 @@
                 android:layout_marginTop="20dp"
                 android:layout_marginBottom="10dp"
                 android:id="@+id/NameLayout"
-                android:visibility="invisible">
+                android:visibility="gone">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -88,7 +89,7 @@
                 android:layout_marginTop="20dp"
                 android:layout_marginBottom="10dp"
                 android:id="@+id/EmailLayout"
-                android:visibility="invisible">
+                android:visibility="gone">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -116,7 +117,7 @@
                 android:layout_marginTop="20dp"
                 android:layout_marginBottom="10dp"
                 android:id="@+id/MobileLayout"
-                android:visibility="invisible">
+                android:visibility="gone">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -161,13 +162,13 @@
                 android:text="@string/change_password"
                 android:id="@+id/changePassword"
                 android:layout_marginLeft="15dp"
-                android:visibility="invisible" />
+                android:visibility="gone" />
 
             <android.support.design.widget.TextInputLayout
                 android:id="@+id/oldPassLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:visibility="invisible">
+                android:visibility="gone">
 
                 <EditText
                     android:id="@+id/oldPassword"
@@ -182,7 +183,7 @@
                 android:id="@+id/newPassLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:visibility="invisible" >
+                android:visibility="gone" >
 
                 <EditText
                     android:id="@+id/newPassword"
@@ -197,7 +198,7 @@
                 android:id="@+id/confirmPassLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:visibility="invisible" >
+                android:visibility="gone" >
 
                 <EditText
                     android:id="@+id/confirmPassword"
@@ -215,11 +216,18 @@
                 android:id="@+id/update2"
                 android:textColor="@color/primary_text_default_material_dark"
                 android:background="@drawable/roundedbutton"
-                android:visibility="invisible"
+                android:visibility="gone"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp" />
 
         </LinearLayout>
-
+        <ProgressBar
+            android:id="@+id/progressBar"
+            style="?android:attr/progressBarStyleLarge"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_centerHorizontal="true"
+            android:visibility="gone" />
     </RelativeLayout>
 </android.support.v4.widget.NestedScrollView>
