--- a/app/src/main/res/layout/user_settings.xml
+++ b/app/src/main/res/layout/user_settings.xml
@@ -39,7 +39,9 @@
         android:layout_margin="16dp"
         app:borderWidth="0dp"
         app:fabSize="mini"
-        android:src="@android:drawable/ic_menu_edit" />
+        android:src="@android:drawable/ic_menu_edit"
+        android:visibility="visible" />
+
 
 </android.support.design.widget.CoordinatorLayout>
 
