--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -1,87 +1,79 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-//Responsible for menu items
-
-    <group android:checkableBehavior="single">
+    <group android:checkableBehavior="single" android:id="@+id/homegrp">
         <item
             android:id="@+id/home_id"
             android:title="Home"
             android:icon="@mipmap/infobits"
-            ></item>
+            />
     </group>
-    <group android:checkableBehavior="single">
+    <group android:checkableBehavior="single" android:id="@+id/lservgrp">
         <item
             android:id="@+id/os_id"
             android:title="One Search"
-            android:icon="@drawable/icon2"
-            ></item>
+            android:icon="@drawable/osx"
+            />
         <item
             android:id="@+id/comm_id"
             android:title="Connect With Library"
             android:icon="@mipmap/cwl"
-            ></item>
+            />
 
         <item
             android:id="@+id/news_id"
             android:title="Daily News"
             android:icon="@mipmap/dn"
-            ></item>
+            />
 
         <item
             android:id="@+id/ibb_id"
             android:title="InfoBITS Bulletin"
-            android:icon="@drawable/settings"
-            ></item>
-
-        <item
-            android:id="@+id/ill_id"
-            android:title="Inter Library Loan"
-            android:icon="@drawable/settings"
-            ></item>
+            android:icon="@drawable/info"
+            />
 
         <item
             android:id="@+id/lf_id"
             android:title="Lost and Found"
-            android:icon="@drawable/settings"
+            android:icon="@drawable/lostandfound"
             >
         </item>
     </group>
 
-    <group android:checkableBehavior="single">
+    <group android:checkableBehavior="single" android:id="@+id/lresgrp">
         <item
             android:id="@+id/qp_id"
             android:title="Question Papers"
-            android:icon="@drawable/icon2"
-            ></item>
+            android:icon="@drawable/qpxx"
+            />
 
         <item
             android:id="@+id/eb_id"
             android:title="EBooks"
-            android:icon="@drawable/icon3"
-            ></item>
+            android:icon="@drawable/ebxx"
+            />
 
         <item
             android:id="@+id/od_id"
             android:title="Online Databases"
-            android:icon="@drawable/settings"
-            ></item>
+            android:icon="@drawable/odxx"
+            />
 
         <item
             android:id="@+id/opac_id"
             android:title="WEB OPAC"
-            android:icon="@drawable/settings"
-            ></item>
+            android:icon="@drawable/opacxx"
+            />
         <item
             android:id="@+id/od_id1"
             android:title="Online Databases"
             android:icon="@drawable/settings"
-            ></item>
+            />
 
         <item
             android:id="@+id/opac_id1"
             android:title="WEB OPAC"
             android:icon="@drawable/settings"
-            ></item>
+            />
     </group>
 </menu>
