--- a/app/src/main/res/layout/activity_homepage.xml
+++ b/app/src/main/res/layout/activity_homepage.xml
@@ -45,7 +45,7 @@
             android:layout_below="@+id/homeicons"
             android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp"
-            android:fadingEdge="horizontal"></android.support.v4.view.ViewPager>
+            android:fadingEdge="horizontal" />
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -98,11 +98,14 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/imgbt_service4"
                 android:onClick="onClickOPAC"
-                android:src="@drawable/opac"
+                android:src="@mipmap/opac"
                 android:padding="0dp"
                 android:clickable="true"
                 android:layout_margin="12dp"
-                android:layout_below="@+id/imgbt_service1" />
+                android:layout_below="@+id/imgbt_service1"
+                android:scaleType="fitCenter"
+                android:minHeight="96dp"
+                android:minWidth="96dp" />
 
             <ImageButton
                 android:layout_width="wrap_content"
