--- a/app/src/main/res/layout/user_login.xml
+++ b/app/src/main/res/layout/user_login.xml
@@ -1,50 +1,141 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="#fff">
+
+    <android.support.design.widget.AppBarLayout
+        android:id="@+id/app_bar"
+        android:fitsSystemWindows="true"
+        android:layout_height="@dimen/app_bar_height"
+        android:layout_width="match_parent"
+        android:theme="@style/AppTheme.AppBarOverlay"
+        android:title="@string/Login"
+        android:baselineAligned="false"
+        android:background="@color/colorPrimaryDark">
+
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_height="?attr/actionBarSize"
+            android:layout_width="match_parent"
+            app:layout_collapseMode="pin"
+            android:title="@string/Login"
+            android:textColor="#FFF"
+            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+            android:indeterminate="false" />
+    </android.support.design.widget.AppBarLayout>
+
+    <RelativeLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_centerHorizontal="true"
+        android:background="#ddd"
+        android:layout_below="@+id/app_bar"
+        android:layout_margin="10dp"
+        android:id="@+id/CommForm">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="Please fill in the details:"
+            android:id="@+id/header"
+            android:layout_gravity="left"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentLeft="true"
+            android:layout_margin="15dp"
+            android:textSize="28sp"
+            android:textColor="@color/colorPrimaryDark" />
 
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Sign In"
-        android:textAppearance="?android:textAppearanceLarge"
-        android:textStyle="bold"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="10dp"
-        />
-    <EditText
-        android:layout_width="250dp"
-        android:layout_height="wrap_content"
-        android:hint="User Name"
-        android:id="@+id/user_name"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="70dp"
-        />
-    <EditText
-        android:layout_width="250dp"
-        android:layout_height="wrap_content"
-        android:hint="Password"
-        android:id="@+id/user_pass"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="20dp"
-        android:inputType="textPassword"
-        />
-    <Button
-        android:layout_width="100dp"
-        android:layout_height="wrap_content"
-        android:text="Login"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="30dp"
-        android:onClick="userLogin"
-        />
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Register Now"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="40dp"
-        android:onClick="userReg"
-        />
 
-</LinearLayout>
+
+
+            <RelativeLayout
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="#ddd"
+                android:padding="10dp"
+                android:id="@+id/bookLayout">
+
+                <EditText
+                    android:layout_width="350dp"
+                    android:layout_height="40dp"
+                    android:id="@+id/email"
+                    android:layout_gravity="right"
+                    android:textColor="@color/colorPrimaryDark"
+                    android:background="#fff"
+                    android:padding="5dp"
+                    android:textSize="25sp"
+                    android:hint="Bits Mail"
+                    android:layout_alignTop="@+id/titleText"
+                    android:layout_alignRight="@+id/accno"
+                    android:layout_alignEnd="@+id/accno"
+                    android:layout_toEndOf="@+id/authorText"
+                    android:layout_toRightOf="@+id/authorText"
+                    />
+
+
+
+
+
+                <EditText
+                    android:layout_width="350dp"
+                    android:layout_height="40dp"
+                    android:id="@+id/pass"
+                    android:layout_gravity="right"
+                    android:textColor="@color/colorPrimaryDark"
+                    android:background="#fff"
+                    android:padding="5dp"
+                    android:textSize="25sp"
+                    android:hint="Password"
+                    android:layout_below="@+id/email"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginBottom="10dp"
+                    />
+
+
+            </RelativeLayout>
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Sign in"
+            android:textColor="#001589"
+            android:textSize="20dp"
+            android:backgroundTint="@color/colorPrimaryDark"
+            android:id="@+id/bt_signin"
+            style="@style/Base.Widget.AppCompat.Button.Borderless"
+            android:layout_marginTop="52dp"
+            android:layout_below="@+id/bookLayout"
+            android:layout_alignLeft="@+id/header"
+            android:layout_alignStart="@+id/header"
+            android:onClick="OnClick_sign_in" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Forgot Password"
+            android:textColor="#001589"
+            android:backgroundTint="@color/colorPrimaryDark"
+            style="@style/Base.Widget.AppCompat.Button.Borderless"
+            android:textSize="20dp"
+            android:id="@+id/bt_forgot"
+            android:layout_alignTop="@+id/bt_signin"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginRight="15dp"
+            android:onClick="OnClick_forgot_pass" />
+
+
+
+    </RelativeLayout>
+
+
+</RelativeLayout>
+
+
+
