--- a/app/src/main/res/layout/user_settings.xml
+++ b/app/src/main/res/layout/user_settings.xml
@@ -40,7 +40,7 @@
         app:borderWidth="0dp"
         app:fabSize="mini"
         android:src="@android:drawable/ic_menu_edit"
-        android:visibility="visible" />
+        android:visibility="gone" />
 
 
 </android.support.design.widget.CoordinatorLayout>
