--- a/app/src/main/res/layout/activity_library_resources.xml
+++ b/app/src/main/res/layout/activity_library_resources.xml
@@ -38,75 +38,43 @@
                 android:id="@+id/imgbt_service1"
                 android:src="@mipmap/opac"
                 android:onClick="onClickOPAC"
-                android:padding="0dp"
-                android:clickable="true"
-                android:layout_margin="12dp"
                 android:scaleType="fitCenter"
-                android:minHeight="144dp"
-                android:minWidth="144dp" />
+                android:minHeight="120dp"
+                android:minWidth="120dp"
+                android:background="#211d70"
+                android:layout_margin="25dp" />
 
             <ImageButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/imgbt_service2"
-                android:src="@drawable/odxx"
+                android:src="@drawable/odxii"
                 android:onClick="onClickOD"
-                android:padding="0dp"
                 android:clickable="true"
-                android:layout_margin="12dp"
+                android:background="#211d70"
+                android:layout_marginTop="25dp"
+                android:layout_marginBottom="25dp"
                 android:layout_toRightOf="@+id/imgbt_service1" />
-
-            <ImageButton
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/imgbt_service3"
-                android:src="@drawable/qpxx"
-                android:onClick="onClickQP"
-                android:padding="0dp"
-                android:clickable="true"
-                android:layout_below="@+id/imgbt_service1"
-                android:layout_marginLeft="12dp"
-                android:layout_marginTop="12dp"
-                android:layout_marginBottom="12dp"
-                android:layout_toLeftOf="@+id/imgbt_service4"
-                android:layout_toStartOf="@+id/imgbt_service4" />
 
             <ImageButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/imgbt_service4"
                 android:onClick="onClickEB"
-                android:src="@drawable/ebxx"
-                android:padding="0dp"
-                android:clickable="true"
-                android:layout_below="@+id/imgbt_service2"
-                android:layout_alignLeft="@+id/imgbt_service2"
-                android:layout_alignStart="@+id/imgbt_service2"
-                android:layout_margin="12dp" />
+                android:src="@drawable/ebxii"
+                android:background="#211d70"
+                android:layout_below="@+id/imgbt_service1"
+                android:layout_margin="25dp" />
 
             <ImageButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/imgbt_service5"
                 android:onClick="onClickIR"
-                android:src="@drawable/ir"
-                android:padding="0dp"
-                android:clickable="true"
-                android:layout_below="@+id/imgbt_service3"
-                android:layout_alignLeft="@+id/imgbt_service3"
-                android:layout_alignBottom="@+id/imgbt_service6"
-                android:layout_toLeftOf="@+id/imgbt_service4" />
-
-            <ImageButton
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/imgbt_service6"
-                android:onClick="onClickDOT"
-                android:src="@drawable/dotxx"
-                android:padding="0dp"
-                android:clickable="true"
-                android:layout_below="@+id/imgbt_service4"
-                android:layout_alignLeft="@+id/imgbt_service4" />
+                android:src="@drawable/irxii"
+                android:background="#211d70"
+                android:layout_alignLeft="@+id/imgbt_service2"
+                android:layout_alignTop="@+id/imgbt_service4" />
 
         </RelativeLayout>
 
