Ebooks Page and Some other Changes

--- a/app/src/main/res/layout/activity_homepage.xml
+++ b/app/src/main/res/layout/activity_homepage.xml
@@ -59,7 +59,7 @@
             <ImageButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/imgbt_service1"
+                android:id="@+id/taylorFrancis"
                 android:src="@drawable/osx"
                 android:onClick="onClickOs"
                 android:padding="0dp"
@@ -69,12 +69,12 @@
             <ImageButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/imgbt_service2"
+                android:id="@+id/scienceDirect"
                 android:src="@mipmap/libr"
                 android:onClick="onClickLibr"
                 android:padding="0dp"
                 android:clickable="true"
-                android:layout_toRightOf="@+id/imgbt_service1"
+                android:layout_toRightOf="@+id/taylorFrancis"
                 android:minWidth="96dp"
                 android:minHeight="96dp"
                 android:scaleType="fitCenter"
@@ -89,7 +89,7 @@
                 android:padding="0dp"
                 android:clickable="true"
                 android:layout_margin="12dp"
-                android:layout_toRightOf="@+id/imgbt_service2"
+                android:layout_toRightOf="@+id/scienceDirect"
                 android:scaleType="fitCenter"
                 android:minWidth="96dp"
                 android:minHeight="96dp" />
@@ -97,13 +97,13 @@
             <ImageButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/imgbt_service4"
+                android:id="@+id/openAccess"
                 android:onClick="onClickOPAC"
                 android:src="@mipmap/opac"
                 android:padding="0dp"
                 android:clickable="true"
                 android:layout_margin="12dp"
-                android:layout_below="@+id/imgbt_service1"
+                android:layout_below="@+id/taylorFrancis"
                 android:scaleType="fitCenter"
                 android:minHeight="96dp"
                 android:minWidth="96dp"
@@ -112,14 +112,14 @@
             <ImageButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/imgbt_service5"
+                android:id="@+id/springer"
                 android:src="@mipmap/dn"
                 android:onClick="onClickDN"
                 android:padding="0dp"
                 android:longClickable="true"
                 android:clickable="true"
-                android:layout_below="@+id/imgbt_service2"
-                android:layout_toRightOf="@+id/imgbt_service4"
+                android:layout_below="@+id/scienceDirect"
+                android:layout_toRightOf="@+id/openAccess"
                 android:layout_margin="12dp"
                 android:scaleType="fitCenter"
                 android:minHeight="96dp"
@@ -134,7 +134,7 @@
                 android:clickable="true"
                 android:layout_margin="12dp"
                 android:layout_below="@+id/imgbt_service3"
-                android:layout_toRightOf="@+id/imgbt_service5"
+                android:layout_toRightOf="@+id/springer"
                 android:minHeight="96dp"
                 android:minWidth="96dp"
                 android:scaleType="fitCenter" />
